# tock

./: Cargo.toml
arch/cortex-m/src/: nvic.rs
boards/: Makefile.common
boards/ciaa/ciaa-nxp/: Cargo.toml  Makefile  checksum_calc.py  chip_layout.ld  ftdi_lpc4337.cfg
boards/ciaa/ciaa-nxp/src/: main.rs  panic.rs
boards/ciaa/edu-ciaa/: .project  Cargo.toml  Makefile  README.md  chip_layout.ld  config.toml  ftdi_lpc4337.cfg  gdb_from_commandline_startup_commands  gdb_from_commandline_startup_commands_ddd  gdb_from_commandline_startup_commands_jlink  gdb_session.sh  generate_lpc43xx_regs.py  sample-edu-ciaa.elf
boards/ciaa/edu-ciaa/src/: main.rs  panic.rs
boards/ciaa/edu-ciaa/src/ciaa_components/: button.rs  gpio.rs  led.rs
boards/ciaa/edu-ciaa/src/components/: button.rs  gpio.rs  led.rs  mod.rs
chips/lpc43xx/: .project  Cargo.toml
chips/lpc43xx/src/: adc.rs  adchs.rs  atimer.rs  c_can0.rs  c_can1.rs  ccu1.rs  ccu2.rs  cgu.rs  chip.rs  creg.rs  dac.rs  eeprom.rs  emc.rs  ethernet.rs  eventrouter.rs  gima.rs  gpdma.rs  gpio.rs  gpio_group_int0.rs  gpio_group_int1.rs  gpio_pin_int.rs  gpio_port.rs  i2c.rs  i2s.rs  lcd.rs  lib.rs  mcpwm.rs  nvic.rs  pmc.rs  qei.rs  regfile.rs  rgu.rs  ritimer.rs  rtc.rs  sct.rs  scu.rs  sdmmc.rs  sgpio.rs  spi.rs  spifi.rs  (+7 more)
kernel/src/common/: mod.rs
